# flexflow

./: .gitignore  .snyk  README.md  dab.json  databricks.yml  pyproject.toml  pytest.ini  test_add_latest_time_perd.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  commit_checks.yml  commit_test.yml  main.yml
dab/: databricks_template_schema.json
dab/template/: .gitignore  .pre-commit-config.yaml.tmpl  LICENSE  README.md.tmpl  __preamble.tmpl  azure-pipeline-cd.yml.tmpl  azure-pipeline-ci.yml.tmpl  bundle_config_schema.json  dab.json.tmpl  databricks.yml.tmpl  pyproject.toml.tmpl  pytest.ini.tmpl
doc/: governance.md  operations.md  release-notes.md  technical.md
doc/technical/: file_watcher.md  process_manager.md
resources/: environments.yml  tp_dp_ff_pipelines_job.yml
resources/sql/: gold_tp.tp_attr_lkp.sql  gold_tp.tp_bimth_fct.sql  gold_tp.tp_categ_lkp.sql  gold_tp.tp_cntrt_categ_assoc.sql  gold_tp.tp_cntrt_lkp.sql  gold_tp.tp_cntry_regn.sql  gold_tp.tp_custm_fct.sql  gold_tp.tp_measr_lkp.sql  gold_tp.tp_mkt_assoc.sql  gold_tp.tp_mkt_dim.sql  gold_tp.tp_mth_fct.sql  gold_tp.tp_prod_assoc.sql  gold_tp.tp_prod_attr_val_lkp.sql  gold_tp.tp_prod_dim.sql  gold_tp.tp_qtr_fct.sql  gold_tp.tp_run_measr_plc.sql  gold_tp.tp_run_plc.sql  gold_tp.tp_run_prttn_plc.sql  gold_tp.tp_run_task_plc.sql  gold_tp.tp_strct_lkp.sql  gold_tp.tp_strct_lvl_lkp.sql  gold_tp.tp_time_perd_assoc.sql  gold_tp.tp_time_perd_assoc_custm.sql  gold_tp.tp_time_perd_assoc_type.sql  gold_tp.tp_time_perd_fdim.sql  gold_tp.tp_time_perd_type.sql  gold_tp.tp_valdn_agg_fct.sql  (+23 more)
(+275 files in other folders)
